// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button snapshots with default props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Button
    accessibility="label"
    onPress={[MockFunction]}
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Component: Button snapshots with loading 1`] = `
<ContextProvider
  value={Object {}}
>
  <Button
    accessibility="label"
    loading={true}
    onPress={[MockFunction]}
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Component: Button snapshots with other props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Button
    accessibility="label"
    disabled={true}
    onPress={[MockFunction]}
    variant="secondary"
  >
    Text
  </Button>
</ContextProvider>
`;
